# graphics

./: .gitignore  Cargo.toml  README.md
examples/: rotatingpng.rs  snake.rs  test3d.rs
src/: canvas.rs  color.rs  drawing.rs  lib.rs  main.rs  render.rs
src/grfx/: canvas.rs  color.rs  mod.rs  render.rs  shape.rs
src/grfx/image/: imageutils.rs  mod.rs  png.rs
src/image/: mod.rs  png.rs  sprite.rs
src/math/: matrix.rs  mod.rs  test.rs  vector.rs
src/utils/: d3.rs  gz.rs  mod.rs  obj.rs
