[package]
name = "graphics"
version = "0.1.0"
authors = ["willdejs"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit_input_helper = "0.10.0"
inflate = "0.4.5"
glium = "0.30.1"
rand = "0.8.4"
miniz_oxide = "0.5.1"

[profile.release]
debug = true